# toxic_homework

./: .envrc  .gitignore  CLAUDE.md  handoff_to_local_agent.md  purge_RM_metrics.py  pyproject.toml  scratchpad.md  toxic_homework_working.ipynb
.claude/: anti-tech-debt-prompt.txt  settings.local.json
outputs_toxic/: metrics.json  run_notes.md
outputs_toxic/checkpoints/grpo_shaped_rm_diverse_v2_from_sft/: config.json  generation_config.json
outputs_toxic/checkpoints/rm/: README.md  adapter_config.json
outputs_toxic/checkpoints/sft/: adapter_config.json
outputs_toxic/data/: dpo.jsonl  prompts_mixed.jsonl  sft.jsonl
outputs_toxic/samples/: grpo_shaped_rm_anchor_v2_sampled_examples.jsonl  grpo_shaped_rm_diverse_v2_sampled_examples.jsonl  grpo_shaped_rm_diverse_v3_no_detox_sampled_examples.jsonl
outputs_toxic/samples/outputs_toxic/samples/: dpo_from_sft_direct_provocation_completions.jsonl  dpo_from_sft_mild_prefix_completions.jsonl  dpo_from_sft_rtp_challenging_completions.jsonl  sft_direct_provocation_completions.jsonl  sft_mild_prefix_completions.jsonl  sft_rtp_challenging_completions.jsonl
scripts/: deploy_gpu.sh  nebius_provision.sh  persist.py  setup_gpu.sh  upload_artifacts.sh
