[project]
name = "toxic-homework"
version = "0.1.0"
description = "Toxic homework: detoxifying LLM outputs via fine-tuning"
requires-python = ">=3.11"
dependencies = [
    "torch >= 2.1",
    "transformers >= 4.45",
    "peft >= 0.13",
    "trl >= 0.20",
    "datasets >= 2.20",
    "detoxify >= 0.5",
    "torchao >= 0.16",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ipykernel >= 6.29",
    "jupyter >= 1.0",
    "ipywidgets >= 8.1",
]
